fix : dark mode 진입 시 목차 색상 변경

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -18,6 +18,11 @@
   @apply text-gray-500 dark:text-gray-400;
 }
 
+.notion-table-of-contents-item-body {
+  @apply dark:border-b-1;
+  @apply dark:border-b-gray-200;
+}
+
 .notion-toggle {
   @apply w-full;
 }
